# uoapi

./: .gitattributes  .gitignore  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  __init__.py  changelog.md  get_schedules.ipynb  get_subjects.ipynb  old_uOttawa_offerings_long.csv  old_uOttawa_offerings_quick.csv  old_uOttawa_subjects.csv  patterns.py  query_courses_offers.ipynb  query_timetable.py  read_subjects.ipynb  requirements.txt  scraping_flows.py  scraping_utils.py  setup.cfg  setup.py  test-requirements.txt  uO_scrape.py  uOttawa_subjects.csv  uoapi.py
.github/workflows/: build.yaml  test.yml
src/: __init__.py  __version__.py  uoapi.py
src/example/: __init__.py
src/template/: __init__.py  uoapi.py
src/timetable/: query_timetable.py
src/uoapi/: cli.py  log_config.py
tests/: test_query_timetable.py
tests/course/: test_regress.py
tests/data/: csi3140_winter2020.json  examples.tsv  get_icsid.txt  get_response.html  mat4995_winter2020.html  mat4995_winter2020.json  mat4_winter2020.html  mat4_winter2020.json  not_found.html  phy1321_fall2019.json  post_response.html
tests/timetable/: test_query_timetable.py
timetable/: template_query.json
ts_uoapi/: .eslintignore  .eslintrc.js  .prettierrc.js  nodemon.json  package-lock.json  package.json  ts_uoapi.code-workspace  tsconfig-paths.js  tsconfig.exclude.json  tsconfig.json
ts_uoapi/src/: main.ts
uoapi/: __init__.py  __modules__  __version__.py  api.py  api_tools.py  cli.py  log_config.py  uoapi.py
uoapi/course/: __init__.py  cli.py  course_info.py
uoapi/dates/: important_dates.py
(+72 files in other folders)
