[metadata]
description-file = README.md

[flake8]
exclude = .git,__pycache__,dist,build,debian,*.egg,*.egg-info,*.venv,*.archive
max-line-length=100
filename = *.py
max-complexity = 10

[tool:pytest]
markers =
    unit: Marks a unit test
    cli: Marks a CLI test
testpaths = tests
addopts = --cov=src --cov-report term-missing

[mypy]
files = src/**/*.py
